# triqs_ED-DMFT

./: .gitattributes  .gitignore  README.md  bethe_lattice.ipynb  bethe_lattice.py
data/: README.md
ed_solver/: makefile  pyproject.toml  setup.py
ed_solver/ed_solver/: Makefile  __init__.py  triqs_wrapper.py
ed_solver/ed_solver/dmft/: __init__.py  dmft_bar.py  magnetic_par_dmft.py  par_dmft.py
ed_solver/src/: bindings.cpp  constants.h  helpers.cpp  helpers.h  solver.cpp  solver.h  solverLanczos.cpp  solverLanczos.h
ed_solver/tests/: test.cpp  test.py
