[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "ed_solver"
version = "0.1.0"
description = "Exact Diagonalization impurity solver for DMFT"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools]
packages = ["ed_solver", "ed_solver.dmft"]

[project.optional-dependencies]
triqs = ["triqs"]
